# livraria-curso-django

./: .gitignore  .pre-commit-config.yaml  db.sqlite3  pyproject.toml  requirements.txt
Autor/: apps.py  models.py  serializers.py  views.py
Autor/migrations/: 0001_initial.py
Categoria/: admin.py  apps.py  serializers.py  views.py
Categoria/migrations/: 0001_initial.py
Compra/: admin.py  apps.py  models.py  serializers.py  views.py
Editora/: admin.py  apps.py  models.py  serializers.py  views.py
Editora/migrations/: 0001_initial.py
Livro/: admin.py  apps.py  models.py  serializers.py  views.py
Livro/migrations/: 0001_initial.py  0002_livro_autores.py
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_rename_isbn_livro_isbn.py  0003_alter_categoria_descricao.py  0004_livro_autores.py  0005_rename_categoria_livro_categoria_id_and_more.py  0006_rename_categoria_id_livro_categoria_and_more.py  0007_compra.py  0008_itenscompra.py
core/views/: __init__.py  categoriaApiView.py  categoriaClass.py  categoriaGeneric.py  compra.py  tetesIniciais.py
livraria/: settings.py  urls.py
static/: staticfiles.json
