[tool.poetry]
name = "livraria"
version = "0.1.0"
description = ""
authors = ["Felipe Silveira <felipelarson@msn.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
gunicorn = "^20.1.0"
whitenoise = "^6.1.0"
pre-commit = "^2.19.0"
djangorestframework = "^3.13.1"
djangorestframework-simplejwt = "^5.2.0"
drf-spectacular = "^0.22.1"
django-cors-headers = "^3.12.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
